# perf-ninja

./: .buildddddddddddtxt  GetStarted.md
buildbot/: runCI.py
labs/bad_speculation/branches_to_cmov_1/: solution.hpp
labs/bad_speculation/conditional_store_1/: solution.cpp
labs/bad_speculation/lookup_tables_1/: init.cpp  solution.cpp  solution.hpp
labs/bad_speculation/virtual_call_mispredict/: solution.cpp
labs/core_bound/compiler_intrinsics_1/: solution.cpp
labs/core_bound/compiler_intrinsics_2/: helper.hpp  solution.cpp  solution.hpp
labs/core_bound/compiler_intrinsics_3/: solution.cpp  solution.hpp
labs/core_bound/compiler_intrinsics_4/: solution.cpp
labs/core_bound/dep_chains_1/: solution.cpp
labs/core_bound/dep_chains_2/: solution.hpp
labs/core_bound/function_inlining_1/: solution.cpp
labs/core_bound/vectorization_1/: before.ll  build.sh  build.sh~  solution.cpp  solution.hpp
labs/core_bound/vectorization_2/: solution.cpp
labs/memory_bound/data_packing/: CMakeLists.txt  bench.cpp  init.cpp  solution.cpp  solution.h  validate.cpp
labs/memory_bound/false_sharing_1/: solution.cpp
labs/memory_bound/huge_pages_1/: AllocateDoublesArray.hpp  Platform.hpp  solution.cpp
labs/memory_bound/loop_interchange_1/: bench.cpp  build.sh  solution.cpp  solution.h
labs/memory_bound/loop_interchange_2/: CMakeLists.txt  build.sh  check_vec.sh  solution.cpp  solution.h
labs/memory_bound/loop_tiling_1/: solution.cpp
labs/misc/io_opt1/: solution.cpp
labs/misc/pgo/: CMakeLists.txt  app.profdata  code.profdata  default.profdata
tools/gbench/: report.py
(+608 files in other folders)
